@startuml

title __LANGUAGEPROJECT's Class Diagram__\n

  namespace ie.gmit.sw {
    class ie.gmit.sw.Database {
    }
  }
  

  namespace ie.gmit.sw {
    enum Language {
    }
  }
  

  namespace ie.gmit.sw {
    class ie.gmit.sw.LanguageEntry {
    }
  }
  

  namespace ie.gmit.sw {
    class ie.gmit.sw.Parser {
    }
  }
  

  namespace ie.gmit.sw {
    class ie.gmit.sw.Request {
    }
  }
  

  namespace ie.gmit.sw {
    class ie.gmit.sw.ServiceHandler {
    }
  }
  

  ie.gmit.sw.LanguageEntry .up.|> java.lang.Comparable
  ie.gmit.sw.Parser .up.|> java.lang.Runnable
  ie.gmit.sw.Parser -up-|> java.awt.Component
  ie.gmit.sw.Parser o-- ie.gmit.sw.Database : db
  ie.gmit.sw.ServiceHandler -up-|> javax.servlet.http.HttpServlet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
